gcc/testsuite/rust/rustc/ui/suggestions/suggest_print_over_printf.rs
// Suggest print macro when user erroneously uses printf

fn main() {
    let x = 4;
    printf("%d", x);
// { dg-error ".E0425." "" { target *-*-* } .-1 }
// { help ".E0425." "" { target *-*-* } .-2 }
}

